--- a/grafana/base/kustomization.yaml
+++ b/grafana/base/kustomization.yaml
@@ -17,6 +17,7 @@ configMapGenerator:
   behavior: create
   files:
   - dashboards/node-exporter-full.json
+  - dashboards/pod-namespace.json
 
 patches:
 - path: datasources-configmap-patch.yaml
