feat: add sealed secret for grafana

--- a/grafana/base/kustomization.yaml
+++ b/grafana/base/kustomization.yaml
@@ -6,6 +6,7 @@ namespace: monitoring
 
 resources:
 - manifests.yaml
+- sealed-admin-secret.yaml
 
 configMapGenerator:
 - name: grafana-datasources
