--- a/grafana/base/values.yaml
+++ b/grafana/base/values.yaml
@@ -12,13 +12,13 @@ persistence:
     - kubernetes.io/pvc-protection
 
 # Administrator credentials when not using an existing secret (see below)
-adminUser: admin
-adminPassword: strongpassword
+# adminUser: admin
+# adminPassword: strongpassword
 
 # Use an existing secret for the admin user.
 admin:
   ## Name of the secret. Can be templated.
-  existingSecret: ""
+  existingSecret: "grafana-admin-secret"
   userKey: admin-user
   passwordKey: admin-password
 
