--- a/grafana/base/values.yaml
+++ b/grafana/base/values.yaml
@@ -18,7 +18,7 @@ persistence:
 # Use an existing secret for the admin user.
 admin:
   ## Name of the secret. Can be templated.
-  existingSecret: "grafana-admin-secret"
+  existingSecret: grafana-admin-secret
   userKey: admin-user
   passwordKey: admin-password
 
