--- a/grafana/base/manifests.yaml
+++ b/grafana/base/manifests.yaml
@@ -263,12 +263,12 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: grafana-admin-secret
-                  key: admin-user
+                  key: user
             - name: REQ_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: grafana-admin-secret
-                  key: admin-password
+                  key: password
             - name: REQ_URL
               value: http://localhost:3000/api/admin/provisioning/dashboards/reload
             - name: REQ_METHOD
@@ -301,12 +301,12 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: grafana-admin-secret
-                  key: admin-user
+                  key: user
             - name: REQ_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: grafana-admin-secret
-                  key: admin-password
+                  key: password
             - name: REQ_URL
               value: http://localhost:3000/api/admin/provisioning/datasources/reload
             - name: REQ_METHOD
@@ -363,12 +363,12 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: grafana-admin-secret
-                  key: admin-user
+                  key: user
             - name: GF_SECURITY_ADMIN_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: grafana-admin-secret
-                  key: admin-password
+                  key: password
             - name: GF_PATHS_DATA
               value: /var/lib/grafana/
             - name: GF_PATHS_LOGS
