feat: remove password from secret

--- a/grafana/base/values.yaml
+++ b/grafana/base/values.yaml
@@ -12,15 +12,15 @@ persistence:
     - kubernetes.io/pvc-protection
 
 # Administrator credentials when not using an existing secret (see below)
-# adminUser: admin
-# adminPassword: strongpassword
+adminUser: admin
+adminPassword: strongpassword
 
 # Use an existing secret for the admin user.
-admin:
+# admin:
   ## Name of the secret. Can be templated.
-  existingSecret: grafana-admin-secret
-  userKey: admin-user
-  passwordKey: admin-password
+  # existingSecret: grafana-admin-secret
+  # userKey: admin-user
+  # passwordKey: admin-password
 
 ## Sidecars that collect the configmaps with specified label and stores the included files them into the respective folders
 ## Requires at least Grafana 5 to work and can't be used together with parameters dashboardProviders, datasources and dashboards
