--- a/argo-conf/base/kustomization.yaml
+++ b/argo-conf/base/kustomization.yaml
@@ -3,7 +3,11 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+- openebs-crd.yaml
 - openebs.yaml
+- minio.yaml
+- sealed-secret-crd.yaml
+- sealed-secret.yaml
 - prometheus-crd.yaml
 - prometheus.yaml
 - grafana.yaml
