--- a/argo-conf/base/minio.yaml
+++ b/argo-conf/base/minio.yaml
@@ -1,21 +1,20 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: grafana
+  name: minio
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
   labels:
-    name: grafana
+    name: minio
   annotations:
-    argocd.argoproj.io/sync-wave: "4"
+    argocd.argoproj.io/sync-wave: "3"
 spec:
   project: default
   source:
     repoURL: https://github.com/hanapedia/lab-cluster-apps
     targetRevision: HEAD
-    path: grafana/base
+    path: minio/base
   destination:
     server: "https://kubernetes.default.svc"
-    namespace: monitoring
-
+    namespace: minio
