--- a/argo-conf/base/openebs-crd.yaml
+++ b/argo-conf/base/openebs-crd.yaml
@@ -1,21 +1,19 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: grafana
+  name: openebs-crd
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
   labels:
-    name: grafana
+    name: openebs-crd
   annotations:
-    argocd.argoproj.io/sync-wave: "4"
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   project: default
   source:
     repoURL: https://github.com/hanapedia/lab-cluster-apps
     targetRevision: HEAD
-    path: grafana/base
+    path: openebs/crd/base
   destination:
     server: "https://kubernetes.default.svc"
-    namespace: monitoring
-
