--- a/argo-conf/base/prometheus-crd.yaml
+++ b/argo-conf/base/prometheus-crd.yaml
@@ -8,12 +8,12 @@ metadata:
   labels:
     name: prometheus-crd
   annotations:
-    argocd.argoproj.io/sync-wave: "2"
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   project: default
   source:
     repoURL: https://github.com/hanapedia/lab-cluster-apps
     targetRevision: HEAD
-    path: prometheus-crd/base
+    path: prometheus/crd/base
   destination:
     server: "https://kubernetes.default.svc"
