--- a/argo-conf/base/sealed-secret.yaml
+++ b/argo-conf/base/sealed-secret.yaml
@@ -1,21 +1,20 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: grafana
+  name: sealed-secret
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
   labels:
-    name: grafana
+    name: sealed-secret
   annotations:
-    argocd.argoproj.io/sync-wave: "4"
+    argocd.argoproj.io/sync-wave: "2"
 spec:
   project: default
   source:
     repoURL: https://github.com/hanapedia/lab-cluster-apps
     targetRevision: HEAD
-    path: grafana/base
+    path: sealed-secret/sealed-secret/base
   destination:
     server: "https://kubernetes.default.svc"
     namespace: monitoring
-
