--- a/tempo/base/manifests.yaml
+++ b/tempo/base/manifests.yaml
@@ -450,6 +450,12 @@ spec:
       port: 9096
       protocol: TCP
       targetPort: grpc
+    - name: tempo-query-jaeger-ui
+      port: 16686
+      targetPort: 16686
+    - name: tempo-query-metrics
+      port: 16687
+      targetPort: jaeger-metrics
   publishNotReadyAddresses: true
   selector:
     app.kubernetes.io/name: tempo
@@ -479,6 +485,12 @@ spec:
       port: 9095
       protocol: TCP
       targetPort: 9095
+    - name: tempo-query-jaeger-ui
+      port: 16686
+      targetPort: 16686
+    - name: tempo-query-metrics
+      port: 16687
+      targetPort: jaeger-metrics
   selector:
     app.kubernetes.io/name: tempo
     app.kubernetes.io/instance: tempo
@@ -933,6 +945,32 @@ spec:
               name: runtime-config
             - mountPath: /var/tempo
               name: tempo-queryfrontend-store
+        - args:
+            - --query.base-path=/
+            - --grpc-storage-plugin.configuration-file=/conf/tempo-query.yaml
+            - --query.bearer-token-propagation=true
+          image: docker.io/grafana/tempo-query:2.2.1
+          imagePullPolicy: IfNotPresent
+          name: tempo-query
+          ports:
+            - containerPort: 16686
+              name: jaeger-ui
+            - containerPort: 16687
+              name: jaeger-metrics
+          resources:
+            {}
+          securityContext:
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+              - ALL
+            readOnlyRootFilesystem: true
+            runAsGroup: 1000
+            runAsNonRoot: true
+            runAsUser: 1000
+          volumeMounts:
+            - mountPath: /conf
+              name: config
       terminationGracePeriodSeconds: 30
       topologySpreadConstraints:
         - maxSkew: 1
