feat: add minio credentials to query frontend

--- a/tempo/base/values.yaml
+++ b/tempo/base/values.yaml
@@ -71,6 +71,17 @@ queryFrontend:
   query:
     # -- Required for grafana version <7.5 for compatibility with jaeger-ui. Doesn't work on ARM arch
     enabled: true
+  extraEnv:
+  - name: MINIO_ACCESS_KEY
+    valueFrom:
+      secretKeyRef:
+        name: minio
+        key: rootUser
+  - name: MINIO_SECRET_KEY
+    valueFrom:
+      secretKeyRef:
+        name: minio
+        key: rootPassword
 
 traces:
   jaeger:
