--- a/tempo/base/manifests.yaml
+++ b/tempo/base/manifests.yaml
@@ -927,6 +927,17 @@ spec:
               name: http-metrics
             - containerPort: 9095
               name: grpc
+          env:
+            - name: MINIO_ACCESS_KEY
+              valueFrom:
+                secretKeyRef:
+                  key: rootUser
+                  name: minio
+            - name: MINIO_SECRET_KEY
+              valueFrom:
+                secretKeyRef:
+                  key: rootPassword
+                  name: minio
           resources:
             {}
           securityContext:
