--- a/tempo/base/values.yaml
+++ b/tempo/base/values.yaml
@@ -70,7 +70,7 @@ querier:
 queryFrontend:
   query:
     # -- Required for grafana version <7.5 for compatibility with jaeger-ui. Doesn't work on ARM arch
-    enabled: true
+    enabled: false
   extraEnv:
   - name: MINIO_ACCESS_KEY
     valueFrom:
