--- a/tenant/base/role.yaml
+++ b/tenant/base/role.yaml
@@ -6,7 +6,7 @@ metadata:
   name: tenant-role
 rules:
 - apiGroups: [""]
-  resources: ["pods", "services", "configmaps", "persistentvolumeclaims", "secrets"]
+  resources: ["pods", "services", "configmaps", "persistentvolumeclaims", "secrets", "pods/log"]
   verbs: ["get", "list", "watch", "create", "update", "delete"]
 - apiGroups: ["extensions", "apps"]
   resources: ["deployments"]
