tenant: remove resource quota

--- a/tenant/base/kustomization.yaml
+++ b/tenant/base/kustomization.yaml
@@ -6,6 +6,6 @@ resources:
   - cluster-role-binding.yaml
   - cluster-role.yaml
   - namespace.yaml
-  - resource-quota.yaml
   - role-binding.yaml
   - role.yaml
+  # - resource-quota.yaml
