tenant: add monitoring role

--- a/tenant/base/kustomization.yaml
+++ b/tenant/base/kustomization.yaml
@@ -8,4 +8,6 @@ resources:
   - namespace.yaml
   - role-binding.yaml
   - role.yaml
+  - monitoring-role-binding.yaml
+  - monitoring-role.yaml
   # - resource-quota.yaml
