--- a/argo-conf/base/kustomization.yaml
+++ b/argo-conf/base/kustomization.yaml
@@ -3,13 +3,18 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+- cert-manager-crd.yaml
+- cert-manager.yaml
 - openebs-crd.yaml
 - openebs.yaml
-- minio.yaml
 - sealed-secret-crd.yaml
 - sealed-secret.yaml
+- minio.yaml
 - prometheus-crd.yaml
 - prometheus.yaml
+- otel-crd.yaml
+- otel-operator.yaml
+- otel-collector.yaml
 - tempo.yaml
 - grafana.yaml
 - saiki-tenant.yaml
