--- a/argo-conf/base/namespaces.yaml
+++ b/argo-conf/base/namespaces.yaml
@@ -1,20 +1,19 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: minio
+  name: namespaces
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
   labels:
-    name: minio
+    name: namespaces
   annotations:
-    argocd.argoproj.io/sync-wave: "3"
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   project: default
   source:
     repoURL: https://github.com/hanapedia/lab-cluster-apps
     targetRevision: HEAD
-    path: minio/base
+    path: namespaces/base
   destination:
     server: "https://kubernetes.default.svc"
-    namespace: monitoring
