--- a/argo-conf/base/registry.yaml
+++ b/argo-conf/base/registry.yaml
@@ -1,12 +1,12 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: minio
+  name: registry
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
   labels:
-    name: minio
+    name: registry
   annotations:
     argocd.argoproj.io/sync-wave: "3"
 spec:
@@ -14,7 +14,7 @@ spec:
   source:
     repoURL: https://github.com/hanapedia/lab-cluster-apps
     targetRevision: HEAD
-    path: minio/base
+    path: registry/overlays/lab-cluster
   destination:
     server: "https://kubernetes.default.svc"
-    namespace: monitoring
+    namespace: registry
