--- a/otel/collector/base/collector.yaml
+++ b/otel/collector/base/collector.yaml
@@ -8,7 +8,7 @@ spec:
     exporters:
       logging: {}
       otlp:
-        endpoint: tempo.monitory.svc.cluster.local:4317
+        endpoint: tempo-distributor.monitoring.svc.cluster.local:4317
         tls:
           insecure: true
     extensions:
