--- a/argo-conf/base/tempo.yaml
+++ b/argo-conf/base/tempo.yaml
@@ -14,7 +14,7 @@ spec:
   source:
     repoURL: https://github.com/hanapedia/lab-cluster-apps
     targetRevision: HEAD
-    path: tempo/base
+    path: tempo/distributed
   destination:
     server: "https://kubernetes.default.svc"
     namespace: monitoring
