argocd: add chaos mesh application

--- a/argo-conf/base/kustomization.yaml
+++ b/argo-conf/base/kustomization.yaml
@@ -3,23 +3,25 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- namespaces.yaml
-- cert-manager-crd.yaml
 - cert-manager.yaml
-- openebs-crd.yaml
-- openebs.yaml
-- sealed-secret-crd.yaml
-- sealed-secret.yaml
-- minio.yaml
-- registry.yaml
-- prometheus-crd.yaml
-- prometheus.yaml
-- linkerd-crd.yaml
+- cert-manager-crd.yaml
+- chaos-mesh.yaml
+- chaos-mesh-crd.yaml
+- grafana.yaml
 - linkerd.yaml
+- linkerd-crd.yaml
 - linkerd-viz.yaml
+- minio.yaml
+- namespaces.yaml
+- openebs.yaml
+- openebs-crd.yaml
+- otel-collector.yaml
 - otel-crd.yaml
 - otel-operator.yaml
-- otel-collector.yaml
+- prometheus.yaml
+- prometheus-crd.yaml
+- registry.yaml
+- sealed-secret.yaml
+- sealed-secret-crd.yaml
 - tempo.yaml
-- grafana.yaml
 - saiki-tenant.yaml
