chaos-mesh: use cert manager for webhook cert

--- a/chaos-mesh/chaos-mesh/overlays/containerd/values.yaml
+++ b/chaos-mesh/chaos-mesh/overlays/containerd/values.yaml
@@ -1,3 +1,8 @@
 chaosDaemon:
   runtime: containerd
   socketPath: /run/containerd/containerd.sock
+
+webhook:
+  certManager:
+    # Setup the webhook using cert-manager
+    enabled: true
