--- a/chaos-mesh/chaos-mesh/overlays/crio/values.yaml
+++ b/chaos-mesh/chaos-mesh/overlays/crio/values.yaml
@@ -1,3 +1,8 @@
 chaosDaemon:
   runtime: crio
   socketPath: /var/run/crio/crio.sock
+
+webhook:
+  certManager:
+    # Setup the webhook using cert-manager
+    enabled: true
