--- a/prometheus/prometheus/base/values.yaml
+++ b/prometheus/prometheus/base/values.yaml
@@ -20,6 +20,9 @@ prometheus:
         scrape_interval: 10s
         scrape_timeout: 10s
         bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+        scheme: https  # remove if you want to scrape metrics on insecure port
+        tls_config:
+          ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
         kubernetes_sd_configs:
           - role: node
         relabel_configs:
