--- a/kafka/kafka/base/values.yaml
+++ b/kafka/kafka/base/values.yaml
@@ -1,4 +1,7 @@
-# grafana dashboards
+# If you are using the grafana dashboard sidecar,
+# you can import some default dashboards here
 dashboards:
-  enable: true
+  enabled: true
   namespace: monitoring
+  label: grafana_dashboard # this is the default value from the grafana chart
+  labelValue: "1" # this is the default value from the grafana chart
