argocd: add kafka application

--- a/argo-conf/base/kustomization.yaml
+++ b/argo-conf/base/kustomization.yaml
@@ -8,6 +8,9 @@ resources:
 - chaos-mesh.yaml
 - chaos-mesh-crd.yaml
 - grafana.yaml
+- kafka.yaml
+- kafka-crd.yaml
+- kafka-operator.yaml
 - linkerd.yaml
 - linkerd-crd.yaml
 - linkerd-viz.yaml
