--- a/tenant/base/role.yaml
+++ b/tenant/base/role.yaml
@@ -6,7 +6,7 @@ metadata:
   name: tenant-role
 rules:
 - apiGroups: [""]
-  resources: ["pods", "services", "configmaps", "persistentvolumeclaims", "secrets", "pods/log", "pods/portforward", "pods/binding", "events", "nodes"]
+  resources: ["pods", "services", "configmaps", "persistentvolumeclaims", "secrets", "pods/log", "pods/portforward", "pods/binding", "events", "nodes", "serviceaccounts"]
   verbs: ["get", "list", "watch", "create", "update", "delete"]
 - apiGroups: ["extensions", "apps"]
   resources: ["deployments"]
