Update role.yaml(role rolebindings)

--- a/tenant/base/role.yaml
+++ b/tenant/base/role.yaml
@@ -11,3 +11,6 @@ rules:
 - apiGroups: ["extensions", "apps"]
   resources: ["deployments"]
   verbs: ["get", "list", "watch", "create", "update", "delete"]
+- apiGroups: ["rbac.authorization.k8s.io"]
+  resources: ["roles", "rolebindings"]
+  verbs: ["get", "list", "watch", "create", "update", "delete"]
