--- a/tenant/base/cluster-role.yaml
+++ b/tenant/base/cluster-role.yaml
@@ -8,3 +8,6 @@ rules:
 - apiGroups: [""]
   resources: ["nodes"]
   verbs: ["get", "list", "watch"]
+- apiGroups: ["rbac.authorization.k8s.io"]
+  resources: ["clusterrolebindings"]
+  verbs: ["get", "list", "watch", "create", "update", "delete"]
