--- a/tenant/base/role.yaml
+++ b/tenant/base/role.yaml
@@ -6,11 +6,24 @@ metadata:
   name: tenant-role
 rules:
 - apiGroups: [""]
-  resources: ["pods", "services", "configmaps", "persistentvolumeclaims", "secrets", "pods/log", "pods/portforward", "pods/binding", "events", "nodes", "serviceaccounts", "endpoints"]
+  resources: ["configmaps", "persistentvolumeclaims", "secrets", "pods/log", "pods/portforward", "serviceaccounts", "endpoints"]
   verbs: ["get", "list", "watch", "create", "update", "delete"]
+- apiGroups: [""]
+  resources: ["endpoints", "pods/binding"]
+  verbs: ["get", "list", "watch", "update", "delete"]
+- apiGroups: [""]
+  resources: ["events"]
+  verbs: ["get", "list", "watch", "delete"]
+- apiGroups: [""]
+  resources: ["services"]
+  verbs: ["create", "update" , "delete"]
+- apiGroups: [""]
+  resources: ["pods"]
+  verbs: ["create", "update"]
 - apiGroups: ["extensions", "apps"]
   resources: ["deployments"]
   verbs: ["get", "list", "watch", "create", "update", "delete"]
 - apiGroups: ["rbac.authorization.k8s.io"]
   resources: ["roles", "rolebindings"]
   verbs: ["get", "list", "watch", "create", "update", "delete"]
+
