--- a/tenant/base/cluster-role.yaml
+++ b/tenant/base/cluster-role.yaml
@@ -9,6 +9,9 @@ rules:
   resources: ["nodes", "replicationcontrollers", "services", "namespaces"]
   verbs: ["get", "list", "watch"]
 - apiGroups: [""]
+  resources: ["namespaces"]
+  verbs: ["get", "list", "watch", "patch"]
+- apiGroups: [""]
   resources: ["persistentvolumeclaims", "persistentvolumes"]
   verbs: ["get", "list", "patch", "update", "watch"]
 - apiGroups: [""]
