--- a/tenant/base/cluster-role.yaml
+++ b/tenant/base/cluster-role.yaml
@@ -71,3 +71,6 @@ rules:
 - apiGroups: ["rbac.authorization.k8s.io"]
   resources: ["clusterroles", "clusterrolebindings"]
   verbs: ["get", "list", "watch", "create", "update", "delete"]
+- apiGroups: ["batch"]
+resources: ["cronjobs"]
+verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
